# demo_code

./: pyproject.toml
discord_bot_analytics/code/: function_app.py  requirements.txt
discord_bot_analytics/slash_commands/: discord_commands.yaml  register_command.py
discord_bot_analytics/test_gsheets_REST_API/: test_requests.ipynb
